--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/export.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/export.jspx
@@ -10,6 +10,7 @@
 	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
 	xmlns:buttons="urn:jsptagdir:/WEB-INF/tags/bstags/buttons"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
+	xmlns:spring="http://www.springframework.org/tags"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 
@@ -94,16 +95,16 @@
 				</p>
         </div>
         
-        <hr />  								
+        <hr />
   		
   		<table class="table table-striped" id="favoriteformats"
 				style="font-size: 85%;">
-  			<caption>
+			<caption>
 					<h3>Favorite layouts</h3>
-  			</caption> 
-
+			</caption> 
+			<spring:eval var="abstractJabRefLayoutClass" expression="T(java.lang.Class).forName('org.bibsonomy.layout.jabref.AbstractJabRefLayout')" />
 			<c:forEach var="mapEntry" items="${command.layoutMap}">
-		    	<c:if test="${mapEntry.value.publicLayout and mapEntry.value.isFavorite}">			
+				<c:if test="${mapEntry.value.publicLayout and mapEntry.value.isFavorite}">
 					<tr>
 						<c:choose>
 				  			<!-- 
