--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
@@ -47,6 +47,8 @@
 			
 			<groupsettings:userlists group="${group}" />
 			
+			<groupsettings:delete group="${group}" />
+			
 <!-- TODO: Adapt AjaxCvController to CV modification by other users (e.g. admin - - > group) -->
 <!--			<settings:cv command="${command}" isGroup="${true}"/> -->
 		</jsp:attribute>
