--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -434,7 +434,8 @@ ul.posts li.post:last-child {
 
 
 li.post div.in-my-collection,
-li.post div.glyphicon-private {
+li.post div.glyphicon-private,
+li.post div.remote-post {
 	position:relative; 
 	width: 0px;
 	overflow: visible; 
@@ -447,6 +448,14 @@ li.post div.in-my-collection {
 	left: 5px; 
 	color: @link-color;
 }
+
+li.post div.remote-post {
+	font-size: 14px;
+	top: -85px;
+	left: 4px;
+	color: @link-color;
+}
+
 
 li.post div.glyphicon-private {
 	font-size: 18px; 
