--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/spam.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/spam.jspx
@@ -527,7 +527,7 @@
 			
 			<br />
 			
-			<span class="sidebar_h"><fmt:message key="navi.settings" /></span>
+			<h4 class="sidebar"><fmt:message key="navi.settings" /></h4>
 				
 			
 			
