--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/saml/limitedAccountActivation.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/saml/limitedAccountActivation.jspx
@@ -133,7 +133,7 @@
 		<jsp:attribute name="sidebar">
 				<ul>
 					<li>
-						<span class="sidebar_h"><fmt:message key="busytags"/></span>
+						<h4 class="sidebar"><fmt:message key="busytags"/></h4>
 						<tags:cloud requPath="tag" cmd="${command.tagcloud}" tagboxMinfreqStyle="none" tagSizeMode="home"/>
 					</li>
 				</ul>
