--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/followers.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/followers.jspx
@@ -74,7 +74,7 @@
 
           <!-- add a follower -->
           <li>
-          	<span class="sidebar_h"><fmt:message key="follow.addFollower"/></span>
+          	<h4 class="sidebar"><fmt:message key="follow.addFollower"/></h4>
           	<form:form class="sidebar_collapse_content" action="/ajax/handleUserRelation" method="POST">
           		<label for="requestedUserName"><fmt:message key="user"/>:</label><c:out value=" "/>
             	<input size="20" type="text" name="requestedUserName" id="requestedUserName"/>
@@ -89,7 +89,7 @@
           
           <!--  ranking settings -->
           <li>
-          	<span class="sidebar_h"><fmt:message key="navi.settings"/></span>
+          	<h4 class="sidebar"><fmt:message key="navi.settings"/></h4>
           	<form:form class="sidebar_collapse_content" method="GET" action="/followers">
           		<fmt:message key="ranking.method"/>:<c:out value=" "/>
           		<form:select path="ranking.method">          		
