--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/friends.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/friends.jspx
@@ -35,7 +35,7 @@
 		
 		<jsp:attribute name="sidebar">
 		<ul>	
-          <li><span class="sidebar_h"><fmt:message key="friends.friendof"/></span> 
+          <li><h4 class="sidebar"><fmt:message key="friends.friendof"/></h4> 
             <ul class="tagcloud sidebar_collapse_content">
               <c:forEach var="user" items="${command.userFriends}">
                 <li><a href="${relativeUrlGenerator.getFriendUrlByUserName(user.name)}"><c:out value="${user.name}"/></a><c:out value=" "/></li>
@@ -43,7 +43,7 @@
             </ul>
           </li>
 
-          <li><span class="sidebar_h"><fmt:message key="friends.yourfriends"/></span>
+          <li><h4 class="sidebar"><fmt:message key="friends.yourfriends"/></h4>
             <ul class="sidebar_collapse_content">
               <c:forEach var="user" items="${command.friendsOfUser}">
                 <li>
@@ -67,7 +67,7 @@
 		  </li>
 				
           <!--  add a friend  -->
-          <li><span class="sidebar_h"><fmt:message key="friends.addfriend"/></span>
+          <li><h4 class="sidebar"><fmt:message key="friends.addfriend"/></h4>
 
             <form class="sidebar_collapse_content" name="friends" method="POST" action="/ajax/handleUserRelation">
               <label for="laddfriend"><fmt:message key="user"/> </label><c:out value=" "/>
