--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/grouptag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/grouptag.jspx
@@ -80,7 +80,7 @@
 			
 			<!-- tags -->
 			<li>
-				<span class="sidebar_h"><fmt:message key="tags"/></span>
+				<h4 class="sidebar"><fmt:message key="tags"/></h4>
 				<tags:cloud requPath="${mtl:getLowerPath(requPath)}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" tagboxMinfreqStyle="default"/>
 			</li>
 		</ul>
