--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/recommended.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/recommended.jspx
@@ -33,7 +33,7 @@
 		<jsp:attribute name="sidebar">
 			<ul>
 				<li>
-					<span class="sidebar_h"><fmt:message key="tags.of_recommendations"/></span>
+					<h4 class="sidebar"><fmt:message key="tags.of_recommendations"/></h4>
 					<tags:cloud requPath="tag" cmd="${command.tagcloud}" tagboxMinfreqStyle="none" tagSizeMode="user"/>
 				</li>
 			</ul>
