--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/search.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/search.jspx
@@ -56,7 +56,7 @@
 		<jsp:attribute name="sidebar">
 		<ul>
 			<li>
-				<span class="sidebar_h"><fmt:message key="tags"/></span>
+				<h4 class="sidebar"><fmt:message key="tags"/></h4>
 				
 				<c:set var="requPathToUse" value="${requPath}" />
 				<c:if test="${hasTags}">
