--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/settings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/settings.jspx
@@ -150,7 +150,7 @@
 				
 				<!--  add a friend  
 				<li>
-					<span class="sidebar_h"><fmt:message key="friends.addfriend"/></span>
+					<h4 class="sidebar"><fmt:message key="friends.addfriend"/></h4>
 					
 					<form class="sidebar_collapse_content" name="friends" method="POST" onsubmit="return submitUsername($('#laddfriend'));">
 						<label for="laddfriend"><fmt:message key="user"/> </label><c:out value=" "/>
