--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/spheres/sphere.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/spheres/sphere.jspx
@@ -82,7 +82,7 @@
 
 				<!-- tags -->
 				<li>
-			    <span class="sidebar_h"><fmt:message key="tags" /></span>
+			    <h4 class="sidebar"><fmt:message key="tags" /></h4>
 			      <c:if test="${not empty command.requestedTags}">
 				    <c:set var="requPath" value="${mtl:getLowerPath(requPath)}" />
 			      </c:if>
