--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/url.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/url.jspx
@@ -83,7 +83,7 @@
 			<ul>
 				<!-- display tags -->
 				<li>
-					<span class="sidebar_h"><fmt:message key="tags"/></span>
+					<h4 class="sidebar"><fmt:message key="tags"/></h4>
 					<tags:cloud requPath="tag" cmd="${command.tagcloud}"/>
 				</li>
 				<resource:metaData command="${command}" />
