--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/viewabletag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/viewabletag.jspx
@@ -78,13 +78,13 @@
 			
 			<!-- related tags -->
 			<li>
-				<span class="sidebar_h"><fmt:message key="relatedtags"/></span>
+				<h4 class="sidebar"><fmt:message key="relatedtags"/></h4>
 				<tags:related requPath="${requPath}" cmd="${command.relatedTagCommand}" order=""/>
 			</li>
 			
 			<!-- tags -->
 			<li>
-				<span class="sidebar_h"><fmt:message key="tags"/></span>
+				<h4 class="sidebar"><fmt:message key="tags"/></h4>
 				<tags:cloud requPath="${mtl:getLowerPath(requPath)}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
 			</li>
 		</ul>
