--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/author.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/author.jspx
@@ -10,6 +10,7 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav"> 
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -40,12 +41,11 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-			<ul>
-				<li>
-					<h4 class="tagcloud-headline sidebar-headline sidebar"><fmt:message key="tags"/></h4>
+			<sidebar:sidebarItem textKey="tags">
+				<jsp:attribute name="content">
 					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
-				</li>
-			</ul>
+				</jsp:attribute>
+			</sidebar:sidebarItem>
 		</jsp:attribute>
 	</layout:resourceLayout>
 </jsp:root>
