--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtexkey.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtexkey.jspx
@@ -9,6 +9,7 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -47,27 +48,26 @@
 		
 		
 		<jsp:attribute name="sidebar">
-			<ul>
-				<li>
-					<h4 class="sidebar"><fmt:message key="tags"/></h4>
+			<sidebar:sidebarItem textKey="tags">
+				<jsp:attribute name="content">
 					<tags:cloud requPath="tag" cmd="${command.tagcloud}" tagSizeMode="home"/>
-				</li>
-				
-				<!-- enable autocompletion for bibtexkeys -->
-				<c:if test="${not empty command.requestedUser}"> 
-					<script type="text/javascript">
-					<![CDATA[
-					         $(function(){
-					     		$("#inpf").autocomplete("/generalAjax?action=getBibtexKeysForUser&requestedUser=${command.requestedUser}", {
-					     			width: 260,
-					     			selectFirst: true
-					     		});
-					       });					
-						
-					]]>
-					</script>
-				</c:if>
-			</ul>	
+				</jsp:attribute>
+			</sidebar:sidebarItem>				
+			
+			<!-- enable autocompletion for bibtexkeys -->
+			<c:if test="${not empty command.requestedUser}"> 
+				<script type="text/javascript">
+				<![CDATA[
+				         $(function(){
+				     		$("#inpf").autocomplete("/generalAjax?action=getBibtexKeysForUser&requestedUser=${command.requestedUser}", {
+				     			width: 260,
+				     			selectFirst: true
+				     		});
+				       });					
+					
+				]]>
+				</script>
+			</c:if>
 		</jsp:attribute>
 		
 		<!-- add jquery javascript resources to enable autocompletion --> 
