--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/clipboard.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/clipboard.jspx
@@ -11,6 +11,7 @@
 	xmlns:button="urn:jsptagdir:/WEB-INF/tags/bstags/buttons"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true"/>
@@ -41,8 +42,11 @@
 			| sidebar
 			+-->
 		<jsp:attribute name="sidebar">
-			<h4 class="sidebar"><fmt:message key="post_bibtex.scan.title" /></h4>
-			<parts:qrcode infoMessageKey="qrcode.info.basket.readerInfoMessage" />
+			<sidebar:sidebarItem textKey="post_bibtex.scan.title">
+				<jsp:attribute name="content">
+					<parts:qrcode infoMessageKey="qrcode.info.basket.readerInfoMessage" />
+				</jsp:attribute>
+			</sidebar:sidebarItem>
 		</jsp:attribute>
 		
 		<!--+
