--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/concept.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/concept.jspx
@@ -10,6 +10,7 @@
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:user="urn:jsptagdir:/WEB-INF/tags/bstags/resources/user"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -78,51 +79,52 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-		<ul>
 			<!--  links to tag / concept pages -->
-			<div class="smalltext">
-				<parts:tagsAndConceptsForSidebar/>
-			</div>			
+			<parts:tagsAndConceptsForSidebar/>
 			
 			<!-- display user's tag relations -->			
-			<li>
-				<c:choose>
-					<c:when test="${not empty command.requestedUser}">
-						<fmt:message var="tagRelationsTitle" key="tagrelations.user.title"/>
-						<c:url var="relationsUrl" value="${relativeUrlGenerator.getConceptsUrlByString(command.requestedUser)}" />
-					</c:when>
-					<c:when test="${not empty command.requestedGroup}">
-						<fmt:message var="tagRelationsTitle" key="tagrelations.group.title"/>
-						<c:url var="relationsUrl" value="${relativeUrlGenerator.getConceptsUrlByString(command.requestedGroup)}" />
-					</c:when>						
-					<c:otherwise>
-						<fmt:message var="tagRelationsTitle" key="tagrelations.all.title"/>
-						<c:url var="relationsUrl" value="/concepts" />
-					</c:otherwise>
-				</c:choose>
-				<h4 class="sidebar">				
-					<a href="${relationsUrl}" title="${tagRelationsTitle}">
-						<fmt:message key="tagrelations"/>
-					</a>
-				</h4>	
-				<tags:concepts cmd="${command.concepts}" usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" requestedUserName="${command.requestedUser}" requestedConcepts="${command.requestedTagsList}"/>
-			</li>
+			<sidebar:sidebarItem textKey="tagrelations">
+				<jsp:attribute name="content">
+					<c:choose>
+						<c:when test="${not empty command.requestedUser}">
+							<fmt:message var="tagRelationsTitle" key="tagrelations.user.title"/>
+							<a href="${relativeUrlGenerator.getConceptsUrlByString(command.requestedUser)}" title="${tagRelationsTitle}">
+								<fmt:message key="tagrelations.user"/>
+							</a>
+						</c:when>
+						<c:when test="${not empty command.requestedGroup}">
+							<fmt:message var="tagRelationsTitle" key="tagrelations.group.title"/>
+							<a href="${relativeUrlGenerator.getConceptsUrlByString(command.requestedGroup)}" title="${tagRelationsTitle}">
+								<fmt:message key="tagrelations.group"/>
+							</a>
+						</c:when>						
+						<c:otherwise>
+							<fmt:message var="tagRelationsTitle" key="tagrelations.all.title"/>
+							<a href="/concepts" title="${tagRelationsTitle}">
+								<fmt:message key="tagrelations.all"/>
+							</a>
+						</c:otherwise>
+					</c:choose>
+					<tags:concepts cmd="${command.concepts}" usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" requestedUserName="${command.requestedUser}" requestedConcepts="${command.requestedTagsList}"/>
+				</jsp:attribute>
+			</sidebar:sidebarItem>
+
 
 			<!-- if requestedUser is set, show the tag cloud -->			
 			<c:if test="${(not empty command.requestedUser) or (not empty command.requestedGroup)}">
-				<c:if test="${not empty command.requestedUser}">
-					<c:set var="requPathTagCloud" value="user/${mtl:encodeURI(command.requestedUser)}"/>
-				</c:if>
-				<c:if test="${not empty command.requestedGroup}">
-					<c:set var="requPathTagCloud" value="group/${mtl:encodeURI(command.requestedGroup)}"/>
-				</c:if>				
-				<!-- display tags -->
-				<li>
-					<h4 class="sidebar"><fmt:message key="tags"/></h4>
-					<tags:cloud requPath="${requPathTagCloud}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user"/>
-				</li>
+				<sidebar:sidebarItem textKey="tags">
+					<jsp:attribute name="content">
+						<c:if test="${not empty command.requestedUser}">
+							<c:set var="requPathTagCloud" value="user/${mtl:encodeURI(command.requestedUser)}"/>
+						</c:if>
+						<c:if test="${not empty command.requestedGroup}">
+							<c:set var="requPathTagCloud" value="group/${mtl:encodeURI(command.requestedGroup)}"/>
+						</c:if>				
+						<!-- display tags -->
+						<tags:cloud requPath="${requPathTagCloud}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user"/>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
 			</c:if>
-		</ul>
 		</jsp:attribute>
 		
 	</layout:resourceLayout>
