more sidebar items

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/friends.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/friends.jspx
@@ -62,6 +62,7 @@
           
 		  <!-- list all spheres -->
 		  <li>
+		  	<!-- FIXME user the following message as textKey for sidebarItem -->
 			<fmt:message key="spheres.sidebar.title" var="spheresCloudTitle" />
 			<spheres:spheresCloud title="${spheresCloudTitle}"><!-- keep me! --></spheres:spheresCloud>
 		  </li>
